--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 
 /code_my/.ipynb_checkpoints/CreditRiskModeling-PDModel-WithComments-2-checkpoint.ipynb
 /code_my/.ipynb_checkpoints/CreditRiskModeling-Preparation-WithComments-1-checkpoint.ipynb
+/code_my/.ipynb_checkpoints/Untitled-checkpoint.ipynb
