--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@
 /code_my/.ipynb_checkpoints/CreditRiskModeling-PDModel-WithComments-2-checkpoint.ipynb
 /code_my/.ipynb_checkpoints/CreditRiskModeling-Preparation-WithComments-1-checkpoint.ipynb
 /code_my/.ipynb_checkpoints/Untitled-checkpoint.ipynb
+/code_backup/df_scorecard.csv
+/code_backup/inputs_train_with_ref_cat.csv
+/code_backup/pd_model.sav
+/code_my/.ipynb_checkpoints/PD modeling-checkpoint.ipynb
+/code_my/.ipynb_checkpoints/PD_modeling-checkpoint.ipynb
+/code_my/df.csv
+/code_my/*.csv
+/code_backup/*.csv
